--- a/templates/cart.html
+++ b/templates/cart.html
@@ -12,7 +12,7 @@
         <p>Price: ${{ product[2] }}</p>  <!-- Product Price -->
         <img src="{{ product[3] }}" alt="{{ product[1] }}" width="200">  <!-- Product Image -->
         
-        <form action="{{ url_for('checkout') }}" method="POST">
+        <form action="{{ url_for('payment', product_name=product[1]) }}" method="POST">
             <input type="hidden" name="product_name" value="{{ product[1] }}">
             <input type="text" name="customer_name" placeholder="Enter your name" required><br>
             <input type="email" name="customer_email" placeholder="Enter your email" required><br>
